<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<modules>
		<module>ws-gateway-domain</module>
        <module>ws-gateway-api</module>
		<module>ws-gateway-application</module>
		<module>ws-gateway-infrastructure</module>
        <module>ws-gateway-functional-tests</module>
    </modules>

	<groupId>com.cosmin.wsgateway</groupId>
	<artifactId>ws-gateway</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ws-gateway</name>
	<description>WebSocket Api Gateway</description>

	<properties>
		<project.version>0.0.1-SNAPSHOT</project.version>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<spring-boot.version>2.2.5.RELEASE</spring-boot.version>
		<spring.version>5.2.5.RELEASE</spring.version>
		<spring-cloud.version>2.1.7.RELEASE</spring-cloud.version>

		<lombok.version>1.18.12</lombok.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<vertx.version>3.8.5</vertx.version>
		<jackson.version>2.10.3</jackson.version>
		<validation-api.version>2.0.1.Final</validation-api.version>
		<hibernate-validator.version>6.1.2.Final</hibernate-validator.version>
		<json-path.version>2.4.0</json-path.version>
		<reactor-core.version>3.3.4.RELEASE</reactor-core.version>
		<junit.version>5.6.1</junit.version>
		<mapstruct.version>1.3.1.Final</mapstruct.version>
		<hamcrest.version>2.2</hamcrest.version>
		<mockito-junit-jupiter.version>3.3.3</mockito-junit-jupiter.version>
		<reactor-netty.version>0.9.6.RELEASE</reactor-netty.version>
		<javax.el.version>3.0.0</javax.el.version>
		<ignite.version>2.8.1</ignite.version>
		<micrometer-registry.version>1.5.1</micrometer-registry.version>
		<javatuples.version>1.2</javatuples.version>
		<reactor-kafka.version>1.2.2.RELEASE</reactor-kafka.version>
		<wiremock.version>2.26.3</wiremock.version>
		<hazelcast.version>4.0.1</hazelcast.version>
		<hazelcast-kubernetes-version>2.0.1</hazelcast-kubernetes-version>
		<logback-classic.version>1.2.3</logback-classic.version>
		<logstash-logback-encoder.version>6.4</logstash-logback-encoder.version>
		<awaitility.version>4.0.3</awaitility.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-sleuth</artifactId>
				<version>${spring-cloud.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-actuator</artifactId>
				<version>${spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-web</artifactId>
				<version>${spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-webflux</artifactId>
				<version>${spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webflux</artifactId>
				<version>${spring.version}</version>
			</dependency>

			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-core</artifactId>
				<version>${reactor-core.version}</version>
			</dependency>

			<dependency>
				<groupId>io.projectreactor.netty</groupId>
				<artifactId>reactor-netty</artifactId>
				<version>${reactor-netty.version}</version>
			</dependency>

			<dependency>
				<groupId>io.projectreactor.kafka</groupId>
				<artifactId>reactor-kafka</artifactId>
				<version>${reactor-kafka.version}</version>
			</dependency>

			<dependency>
				<groupId>io.vertx</groupId>
				<artifactId>vertx-web</artifactId>
				<version>${vertx.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-registry-prometheus</artifactId>
				<version>${micrometer-registry.version}</version>
			</dependency>

			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-core</artifactId>
				<version>${micrometer-registry.version}</version>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<optional>true</optional>
			</dependency>

			<dependency>
				<groupId>org.javatuples</groupId>
				<artifactId>javatuples</artifactId>
				<version>${javatuples.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>${validation-api.version}</version>
            </dependency>

			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate-validator.version}</version>
			</dependency>

			<dependency>
				<groupId>org.glassfish</groupId>
				<artifactId>javax.el</artifactId>
				<version>${javax.el.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>${json-path.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.ignite</groupId>
				<artifactId>ignite-core</artifactId>
				<version>${ignite.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.ignite</groupId>
				<artifactId>ignite-spring</artifactId>
				<version>${ignite.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.ignite</groupId>
				<artifactId>ignite-rest-http</artifactId>
				<version>${ignite.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.ignite</groupId>
				<artifactId>ignite-kubernetes</artifactId>
				<version>${ignite.version}</version>
			</dependency>

			<dependency>
				<groupId>com.hazelcast</groupId>
				<artifactId>hazelcast</artifactId>
				<version>${hazelcast.version}</version>
			</dependency>

			<dependency>
				<groupId>com.hazelcast</groupId>
				<artifactId>hazelcast-kubernetes</artifactId>
				<version>${hazelcast-kubernetes-version}</version>
			</dependency>

			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>

			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback-classic.version}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest</artifactId>
				<version>${hamcrest.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito-junit-jupiter.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-test</artifactId>
				<scope>test</scope>
				<version>${reactor-core.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.tomakehurst</groupId>
				<artifactId>wiremock-jre8</artifactId>
				<version>${wiremock.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>${awaitility.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>${spring-boot.version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>org.junit.vintage</groupId>
						<artifactId>junit-vintage-engine</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
				<configuration>
					<excludes>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<argLine>@{argLine}</argLine>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*IT.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<includes>
										<include>com.cosmin.wsgateway.domain.**</include>
										<include>com.cosmin.wsgateway.application.**</include>
										<include>com.cosmin.wsgateway.requests.**</include>
									</includes>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.50</minimum>
										</limit>
										<limit>
											<counter>INSTRUCTION</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.50</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<configLocation>.mvn/checkstyle.xml</configLocation>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
				</configuration>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
